--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -10,16 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
+    "dotenv": "^17.2.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
+    "graphql": "^16.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.30.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
