--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -15,6 +15,7 @@
     "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "^2.11.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "expo": "~50.0.17",
@@ -29,6 +30,7 @@
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.30.0",
+    "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
